<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#233A4E"
    android:orientation="horizontal"
    android:weightSum="3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/newScript"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="150dp"
        android:background="#3B000000"
        android:foregroundGravity="center"
        android:padding="16sp"
        android:text="@string/new_script"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="createNewScript"
        app:layout_constraintBottom_toTopOf="@+id/newText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newText"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="150dp"
        android:background="#3B000000"
        android:foregroundGravity="center"
        android:onClick="createNewText"
        android:padding="16sp"
        android:text="@string/new_text"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newScript" />

    <Button
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#3B000000"
        android:foregroundGravity="center"
        android:padding="16sp"
        android:text="@string/credits"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="showPopup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>